# agent-lens

./: .gitignore  README.md  pyproject.toml
datasets/probes/: harmful_agentic_40.jsonl  harmless_agentic_40.jsonl
experiments/delta-crosscoder/: 05_max_act_to_markdown.py  05_model_diffing.py  05_model_diffing_pod.py  README.md
experiments/linear-probes/: README.md
k8s/: job_phase5_delta_crosscoder.yaml
results/: FINDINGS.md
results/behavioral/: agentharm_baseline_chat.json  agentharm_baseline_harmful.json  agentharm_sft_chat.json  agentharm_sft_harmful.json  gate_result.json  layer_stats.json
results/delta-crosscoder/: 05_max_act_top100.md  INTERPRETATION.md  SUMMARY.md  lambda_jaccard.csv  summary.json  top_k_features_lambda1.csv
results/linear-probes/: FFT-safety_format_summary.json  FFT-safety_tool_summary.json  agentic-FFT_format_summary.json  agentic-FFT_tool_summary.json  base_format_summary.json  base_refusal_labels.jsonl  base_refusal_labels_CHAT.jsonl  base_tool_summary.json  chat-control_format_summary.json  chat-control_tool_summary.json  steer_FFT-safety_c1.0.json  steer_FFT-safety_own.json  steer_agentic-FFT_c0.json  steer_agentic-FFT_c1.0.json  steer_agentic-FFT_c2.0.json  steer_agentic-FFT_own.json  steer_base_c1.0.json  steer_base_c2.0.json  steer_chat-control_c1.0.json  steer_chat-control_own.json  transfer_tool.json
scripts/: agentharm_eval.py  build_ehr_probe_set.py
scripts/probes/: data.py  extract.py  format_decomp.py  format_direction.py  label_refusal.py  probe.py  refusal.py  run_phase_a.sh  run_phase_b1.sh  run_phase_format.sh  (+4 more)
(+6 files in other folders)
